add post method for insert data
